test/simple/typeerrors/Examples/ExprLambdaResult.hs
module ExprLambdaResult where

f :: Bool
f = \x -> x
